--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   image_picker: ^1.0.7
-  file_picker: ^6.2.0
-  path_provider: ^2.1.2
-  flutter_blue_plus: ^1.31.16
-  video_player: ^2.8.3
-  mic_stream: ^0.7.1+2
+  file_picker: ^6.0.0
   flutter_sound: ^9.2.6
-  audio_session: ^0.1.6
-  bluetooth_enable_fork: ^0.1.6
+  geolocator: ^11.0.0
+  flutter_reactive_ble: ^5.0.1
+  permission_handler: ^11.3.1
+  flutter_blue_plus: ^1.32.7
+  flutter_hooks: ^0.18.2
+  gallery_saver: ^2.3.2
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
